Added support for ItemName_XX.txt
Translations are sorted alphabetically now when saving .txt files.

The "Create Items Translation" button creates ItemName_empty.txt instead of Items_empty.txt.

A new button "Convert Items.txt" will create ItemName_XX.txt for the currently-selected
language.  Translations are taken from Items_XX.txt.

--- a/src/translatoid/experimentalResize.fxml
+++ b/src/translatoid/experimentalResize.fxml
@@ -91,6 +91,7 @@
                               <Button mnemonicParsing="false" onAction="#addFolderItemConverter" text="Add Folder" />
                               <Button mnemonicParsing="false" onAction="#convertRecipeFileToTranslation" text="Create Recipes Translation" />
                               <Button fx:id="itemConversionConvert" mnemonicParsing="false" onAction="#convertItemFileToTranslation" text="Create Items Translation" />
+                              <Button fx:id="convertItemsDotTxt" mnemonicParsing="false" onAction="#convertItemsDotTxt" text="Convert Items.txt" />
                            </children>
                         </HBox>
                      </children>
